Mise à jour du lien github

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </p>
   </div>
 </div>
-<footer>Made by <a href="https://github.com/Slapiseee">Slapise</a></footer>
+<footer>Made by <a href="https://github.com/Slapise">Slapise</a></footer>
 <script src="assets/js/index.js"></script>
 </body>
 </html>
