Ajout d'un bouton permettant le changement de style

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/style.css" class="css">
 <title>Mini-Projet #1</title>
 </head>
 <body>
 <div class="container">
-  <div class="categorie">
+  <div class="category">
     <h2 class="title">Tim Berners-Lee</h2>
     <div class="selector">
       <img class="arrow" src="assets/html/Arrow-Back.png" alt="Fleche gauche">
@@ -21,6 +21,9 @@
       <strong><u>Tim Berners-Lee</u></strong>, né en 1955, est un informaticien britannique célèbre pour avoir inventé le <strong>World Wide Web</strong> en 1989 au <strong>CERN</strong>. Il a développé les technologies fondamentales du Web, telles que <strong>HTTP</strong>, <strong>HTML</strong> et les <strong>URLs</strong>, et a lancé le premier site Web en <strong>1991</strong>.
     </p>
   </div>
+</div>
+<div>  
+  <button class="style">Changer de style CSS</button>
 </div>
 <footer>Made by <a href="https://github.com/Slapiseee">Slapise</a></footer>
 <script src="assets/js/index.js"></script>
