--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="assets/css/style.css" class="css">
+<link rel="stylesheet" href="assets/css/style.css">
 <title>Mini-Projet #1</title>
 </head>
 <body>
@@ -22,14 +22,10 @@
     </p>
   </div>
 </div>
-<<<<<<< HEAD
 <div>  
   <button class="style">Changer de style CSS</button>
 </div>
 <footer>Made by <a href="https://github.com/Slapiseee">Slapise</a></footer>
-=======
-<footer>Made by <a href="https://github.com/Slapise">Slapise</a></footer>
->>>>>>> aa3cb069ab909c7cc5a60ab267a614c989b20920
 <script src="assets/js/index.js"></script>
 </body>
 </html>
